# exploring-hfds-sandbox

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  flake.nix  pyproject.toml
.docker/: .hdfs.env  hadoop-python-runtime.Dockerfile  hdfs-init.sh
.docker/configs/: core-site.xml  hdfs-site.xml  hive-site.xml  mapred-site.xml  yarn-site.xml
examples/basic-dfs-ops/: Makefile
examples/hive-marts/: README.md
examples/hive-marts/scripts/: build-marts.sh  init-schema.sh  query.sh
examples/hive-marts/sql/: 01-init-schema.sql  02-ingest-raw.sql  03-ingest-staging.sql  04-build-marts.sql
examples/needle-in-haystack/: mapper.py  reducer.py
examples/needle-in-haystack/resources/: haystack-01-wiki-hadoop.html  haystack-02-wiki-cassandra.html  haystack-03-wiki-hive.html
examples/needle-in-haystack/scripts/: submit.sh
examples/wordcount/: input.txt  mapper.py  reducer.py
examples/wordcount/scripts/: submit.sh
